Fix logo on mobile

--- a/src/_includes/css/app.css
+++ b/src/_includes/css/app.css
@@ -151,10 +151,14 @@ body {
     content: "";
     position: absolute;
     inset: 0 -6px;
-    width: 154px;
+    width: 111px;
     height: 100%;
     border: 1px solid var(--bg-contrast-title);
     border: 1px solid #fff6;
+
+    @media (--mq-m) {
+      width: 154px;
+    }
   }
 }
 
